🧵 Patch - fixed overflow within admin

--- a/ui/css/maelstrom.css
+++ b/ui/css/maelstrom.css
@@ -6,6 +6,7 @@
 
 .maelstrom-wrapper {
     min-width: 1400px;
+    overflow-x: auto;
 }
 
 .ant-btn-group + .ant-btn-group {
